Refactor hotel management application to enhance validation and mapping
- Updated HotelController to use HotelRequest and HotelResponse DTOs for hotel creation and updates.
- Introduced HotelMapper for converting between Hotel entities and DTOs.
- Refactored RoomController to utilize RoomRequest and RoomResponse DTOs, and added RoomMapper for entity conversion.
- Enhanced UserController to support UserRequest DTO for user updates.
- Implemented validation annotations in AuthenticationRequest, BookingRequest, HotelRequest, RoomRequest, and UserRequest DTOs.
- Added GlobalExceptionHandler to manage validation errors and type mismatches.
- Created custom validation for date ranges in BookingRequest.
- Introduced UserMapper for mapping between User entities and UserRequest DTOs.
- Added validation for employee and guest registration requests.
- Improved error handling for various exceptions in the application.